tests/reference/asr-array_constructor_with_different_kind-80c5bf4.stderr
semantic error: Element in `real(8)` array constructor is `real(4)`
 --> tests/errors/array_constructor_with_different_kind.f90:4:18
  |
4 |     print *, [x, [1., 2.]]
  |                  ^^^^^^^^ 
